# siphon-sip

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  VERSIONING.md  clippy.toml  docker-compose.yaml  mkdocs.yml  siphon.yaml
.github/: FUNDING.yml
.github/workflows/: audit.yml  ci.yaml  pages.yaml  release.yaml
benches/: baseline.json  crypto.rs  diameter_codec.rs  rtpengine_bencode.rs  sdp_hot_path.rs  sip_hot_path.rs  siphon_rtp_proto.rs
deploy/: README.md
deploy/ha-demo/: docker-compose.ha.yaml  lb.py  proxy.py  sipcli.py  siphon-backend.yaml  siphon-frontend.yaml  validate.sh
deploy/k8s/: configmap.yaml  redis.yaml  service.yaml  statefulset.yaml  validate-kind.sh
docs/: README.md  deployment.md  extensions.md  feature-readiness-matrix.md  getting-started.md  handler-execution-model.md  kernel-firewall.md  media-engines.md  migrating-from-kamailio-opensips.md  scaling-and-redundancy.md  supply-chain.md  support.md  transports.md
docs/cookbook/: call-transfer.md  index.md  least-cost-routing.md  load-balancer.md  manipulation.md  media-rtp.md  monitoring.md  multi-file-scripts.md  number-normalization.md  number-routing.md  online-charging-ocs.md  proxy.md  registrar.md  sbc.md  security.md  snippets.md  whatsapp-calling.md
docs/reference/: call.md  diameter.md  gateway.md  ims.md  index.md  lcr-api.md  media.md  numbers.md  observability.md  proxy.md  registrar.md  reply.md  request.md  sdp.md  security.md  testing.md  types.md
examples/: b2bua_rtpengine.py  diameter_http_bridge.py  diameter_http_bridge.yaml  diameter_server.py  diameter_server.yaml  embed_with_allocator.rs  hss_s6a.py  ims_pcscf.py  ims_pcscf.yaml  ims_scscf.py  ims_scscf.yaml  ims_scscf_aka_lab.py  ims_scscf_lab.py  ims_ue_b2bua.py  ims_ue_b2bua.yaml  lcr_api_server.py  lcr_b2bua.py  lcr_b2bua.yaml  number_routing.py  proxy_rtpengine.py  proxy_rtpproxy.py  teams_sbc.py  teams_sbc.yaml  whatsapp_calling.py  whatsapp_calling.yaml
examples/remote_control/: README.md  control_client.py  control_client.ts  package.json  tsconfig.json
scripts/: b2bua_auth_passthrough.py  b2bua_default.py  b2bua_refer_modes.py  b2bua_ro_charging.py  b2bua_rtpengine_refer.py  banscan_test.sh  bench_regression.sh  cdr_test.sh  charging_test.sh  cut-release.sh  gen_charging_pcap.py  hep_to_pcap.py  lcr_mock_api.py  lcr_sipp_test.sh  lcr_test.py  leak_test_script.py  mem_leak_test.sh  mtu_relay.py  mtu_test.sh  proxy_default.py  run-tests.sh  run_baseline.sh  run_memleak.sh  scale_test.sh  wedge_test.sh
sdk/: README.md  pyproject.toml
sdk/siphon_sdk/: __init__.py  call.py  http.py  http_testing.py  lcr.py  mock_module.py  numbers.py  reply.py  request.py  smpp.py  smpp_testing.py  testing.py  types.py
sdk/tests/: test_b2bua_refer.py  test_b2bua_terminate.py  test_cache_list_len.py  test_call_answer_progress.py  test_call_dial.py  test_cdr_write.py  test_diameter_server_mock.py  test_from_gateway.py  test_http_mock.py  test_ims_ue_b2bua.py  test_ipsec_pending_sa.py  test_lcr.py  test_numbers.py  test_on_cancel.py  test_play_media_wait.py  test_presence_mock.py  test_registrar_alias_chain.py  test_registrar_lookup_contact.py  test_registration_aka.py  test_remove_headers_matching.py  test_reply_reject.py  test_request_reply_headers.py  test_ro_charging.py  test_rtpengine_media.py  test_save_proxy.py  test_send_socket.py  test_smpp_mock.py  test_uri_setters.py  test_whatsapp_calling.py
siphon-bin/: .gitignore  Cargo.toml  Dockerfile
siphon-bin/src/: main.rs
siphon-bin/src/ext/: http.rs  mod.rs  smpp.rs
sipp/: b2bua_auth_uac.xml  b2bua_auth_uas.xml  b2bua_cancel_uas.xml  b2bua_lcr_carrier_a_silent_uas.xml  b2bua_lcr_carrier_a_uas.xml  b2bua_lcr_carrier_b_uas.xml  b2bua_lcr_uac.xml  b2bua_refer_carol_uas.xml  b2bua_refer_outbound_uac.xml  b2bua_refer_reject_uac.xml  b2bua_refer_terminate_bob_uas.xml  b2bua_refer_terminate_uac.xml  b2bua_refer_uac.xml  b2bua_refer_uas.xml  b2bua_reliable_prov_uas.xml  b2bua_set_host_uac.xml  b2bua_set_host_uas.xml  charging_deny_uac.xml  charging_uac.xml  docker-compose.mtu.yaml  docker-compose.yaml  invite_uac_fast.xml  message_404_to_tag.xml  message_auto100.xml  message_auto100_contact.csv  message_auto100_uas.xml  mtu_message_oversized.xml  mtu_message_small.xml  proxy_refer_uac.xml  proxy_refer_uas.xml  register.xml  reject_proxy.py  reject_test.yaml  reject_uac.xml  reject_uas.xml  rtpengine_uac.xml  rtpproxy_uac.xml  set_host_b2bua.py  set_host_test.yaml  subscribe_abandon_uac.xml
sipp/banscan/: banscan.py  banscan_client.py  siphon-banscan.yaml
sipp/cgrates/: cgrates.json
sipp/configs/: siphon.b2bua-auth-test.yaml  siphon.b2bua-refer-modes-test.yaml  siphon.b2bua-rtpengine-refer.yaml  siphon.charging-test.yaml  siphon.lcr-test-hep.yaml  siphon.lcr-test.yaml  siphon.mtu.yaml
sipp/ipsec/: Dockerfile  siphon-pcscf.yaml  siphon-scscf.yaml
sipp/rtpproxy/: mock_rtpproxy.py  siphon-rtpproxy.yaml
sipp/wedge/: probe.py  stuck_client.py  wedge.py  wedge.yaml
src/: config.rs  cors.rs  dispatcher.rs  error.rs  lib.rs  security.rs  server.rs
src/admin/: mod.rs
src/apiban/: mod.rs
src/auth/: mod.rs
src/b2bua/: actor.rs  transfer.rs
src/cache/: mod.rs
src/cdr/: mod.rs
src/control/: listener.rs  mod.rs  protocol.rs  registry.rs
src/dialog/: mod.rs
src/diameter/: auth.rs  codec.rs  cx.rs  dictionary.rs  event_sink.rs  forward.rs  mod.rs  peer.rs  pool.rs  rf.rs  rf_service.rs  ro.rs  ro_service.rs  s6a.rs  s6c.rs  server.rs  sgd.rs  sh.rs  transport.rs
src/dns/: resolver.rs
src/firewall/: mod.rs  nftables.rs
src/gateway/: mod.rs
src/hep/: encoder.rs
src/ifc/: mod.rs
src/ipsec/: milenage.rs  mod.rs  netlink.rs  ue.rs
src/lcr/: mod.rs
src/li/: asn1.rs
src/media/: sdp.rs
src/metrics/: glibc.rs  mod.rs
src/nat/: mod.rs
src/numbers/: mod.rs  policy.rs
src/presence/: mod.rs
src/proxy/: core.rs  session.rs
src/registrant/: aka.rs  mod.rs
src/registrar/: backend.rs  mod.rs  reginfo.rs
tests/: integration_tests.rs  parser_tests.rs  rfc4475_tests.rs  rtpengine_tests.rs
ui/: index.html
(+81 files in other folders)
