[package]
name = "siphon-sip"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "SIPhon — high-performance SIP proxy, B2BUA and IMS platform with free-threaded Python scripting"
readme = "README.md"
homepage = "https://github.com/siphon-project/siphon-sip"
repository = "https://github.com/siphon-project/siphon-sip"
keywords = ["sip", "voip", "proxy", "b2bua", "ims"]
categories = ["network-programming"]
exclude = [
    "sipp/",
    "fuzz/",
    "tests/",
    "scripts/run-tests.sh",
    "scripts/scale_test.sh",
    ".github/",
    "CLAUDE.md",
    ".python-version",
    ".dockerignore",
    "Dockerfile",
    "sdk/",
]

[lib]
name = "siphon"
path = "src/lib.rs"

[[bin]]
name = "siphon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
flume = "0.12"
num_cpus = "1"

# SIP parsing
nom = "8"
bytes = "1.11"
indexmap = { version = "2.13", features = ["serde"] }

# Concurrency
dashmap = "6"
arc-swap = "1"

# Python scripting
# Free-threaded support is auto-detected by PyO3 0.28 when building against Python 3.14t.
# No feature flag needed — just: pyenv shell 3.14t && cargo build
pyo3 = { version = "0.28", features = ["py-clone"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# DNS
hickory-resolver = "0.25"

# Transport
socket2 = "0.6"
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "1"
tokio-tungstenite = "0.28"
futures-util = "0.3"
tokio-sctp = "0.2"
http = "1"

# Diameter AVP decoding
serde_json = "1"

# Config
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.13"
clap = { version = "4", features = ["derive"] }

# HTTP client (APIBAN, HTTP auth backend)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "multipart", "stream"] }

# Crypto (Milenage AKA key derivation for IMS IPsec)
aes = "0.8"

# STIR/SHAKEN — ES256 PASSporT signing/verification (RFC 8224/8225/8226,
# ATIS-1000074). RustCrypto, pure-Rust, no OpenSSL — fits the rustls posture.
# ECDSA signing uses RFC 6979 deterministic nonces, so no RNG plumbing on the
# sign path.
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }  # ES256 sign/verify + key load
x509-cert = { version = "0.2", features = ["pem"] }               # cert parse, SPKI, extensions, validity
base64 = "0.22"                                                    # base64url (URL_SAFE_NO_PAD) for JWS

# Utilities
md5 = "0.7"
sha2 = "0.10"
uuid = { version = "1.22", features = ["v4", "fast-rng"] }
# Cryptographic randomness — used by Milenage AKA RAND generation
# (3GPP TS 35.206) and any other place that needs unpredictable bytes.
getrandom = "0.3"
ipnet = "2"
notify = "8"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Registrar persistence backends (optional, feature-flagged)
redis = { version = "1", features = ["tokio-comp"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
prometheus = { version = "0.13.4", features = ["process"] }
axum = { version = "0.8.8", features = ["tokio"] }
tower = { version = "0.5.3", features = ["util"] }

# Lawful Intercept — ETSI ASN.1/BER + XML
rasn = "0.22"
rasn-derive = "0.22"
chrono = { version = "0.4", default-features = false }
quick-xml = { version = "0.37", features = ["serialize"] }

# iFC evaluation engine — regex for SPT header content matching
regex = "1"

# Global allocator. glibc's malloc serializes on a small number of arenas
# under high-concurrency Rust + tokio workloads (visible in flame graphs as
# `_int_malloc / malloc_consolidate / __libc_free` consuming ~15% of CPU at
# 20k cps). jemalloc keeps per-thread arenas, which removes that contention
# almost entirely without any code changes.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
# Read jemalloc's internal stats (live allocated / resident / retained bytes)
# to expose as Prometheus gauges — `allocated` is the precise leak signal
# (actual live bytes, unlike RSS which includes allocator retention).
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

# Netlink — used by `src/ipsec/netlink.rs` to install XFRM SAs/policies
# without the `ip xfrm` shell-out (3GPP TS 33.203 P-CSCF role).  The crate
# itself is Linux-only because the netlink protocol family does not exist
# on other kernels; consumers gate the netlink backend on cfg(target_os).
[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
rcgen = "0.14"

[features]
default = ["redis-backend", "postgres-backend"]
redis-backend = ["dep:redis"]
postgres-backend = ["dep:tokio-postgres"]

# --- Lint policy ---
# The codebase is clippy-clean (see `clippy.toml` for the one tuned threshold).
# Locally these warn; CI runs `cargo clippy --all-targets -- -D warnings` to
# turn any warning — clippy lint or rustc (unused, dead_code) — into a hard
# failure, so the clean state can't regress. Deny is kept out of the manifest
# so local `cargo build`/`test` stays ergonomic during iteration.
[lints.rust]
unused = "warn"

[lints.clippy]
all = "warn"

[profile.release]
strip = true
opt-level = 3
lto = "thin"

# --- docs.rs configuration ---
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# --- Debian packaging (cargo-deb) ---
[package.metadata.deb]
maintainer = "SIPhon Contributors <mvdvlies@gmail.com>"
section = "net"
priority = "optional"
extended-description = """\
SIPhon is a high-performance SIP proxy, B2BUA, and IMS platform \
written in Rust with free-threaded Python 3.14t scripting support. \
It features a RFC 3261 compliant SIP parser, stateful proxy with \
parallel/sequential forking, digest authentication, in-memory \
registrar with Redis/PostgreSQL backends, and hot-reloaded Python \
routing scripts."""
depends = "$auto, python3 (>= 3.12)"
assets = [
    ["target/release/siphon", "usr/bin/", "755"],
    ["siphon.yaml", "etc/siphon/siphon.yaml", "644"],
    ["scripts/proxy_default.py", "etc/siphon/scripts/proxy_default.py", "644"],
    ["scripts/b2bua_default.py", "etc/siphon/scripts/b2bua_default.py", "644"],
    ["dist/siphon.service", "lib/systemd/system/siphon.service", "644"],
    ["README.md", "usr/share/doc/siphon/README.md", "644"],
    ["LICENSE", "usr/share/doc/siphon/LICENSE", "644"],
]
conf-files = ["/etc/siphon/siphon.yaml"]
maintainer-scripts = "dist/debian/"
systemd-units = { unit-name = "siphon", enable = false, start = false }

# --- RPM packaging (cargo-generate-rpm) ---
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/siphon", dest = "/usr/bin/siphon", mode = "755" },
    { source = "siphon.yaml", dest = "/etc/siphon/siphon.yaml", mode = "644", config = true },
    { source = "scripts/proxy_default.py", dest = "/etc/siphon/scripts/proxy_default.py", mode = "644" },
    { source = "scripts/b2bua_default.py", dest = "/etc/siphon/scripts/b2bua_default.py", mode = "644" },
    { source = "dist/siphon.service", dest = "/usr/lib/systemd/system/siphon.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/siphon/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/siphon/LICENSE", mode = "644" },
]

[package.metadata.generate-rpm.requires]
python3 = ">= 3.12"

# RPM scriptlets: create user, reload systemd, enable on install
[package.metadata.generate-rpm.scriptlets]
pre_install_script = """
getent group siphon >/dev/null || groupadd -r siphon
getent passwd siphon >/dev/null || useradd -r -g siphon -d /var/lib/siphon -s /sbin/nologin -c "SIPhon SIP proxy" siphon
mkdir -p /var/lib/siphon
chown siphon:siphon /var/lib/siphon
"""
post_install_script = """
systemctl daemon-reload
"""
pre_uninstall_script = """
systemctl stop siphon.service 2>/dev/null || true
systemctl disable siphon.service 2>/dev/null || true
"""
post_uninstall_script = """
systemctl daemon-reload
"""
