[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon-sdk"
version = "0.4.30"
description = "Mock library and type stubs for SIPhon SIP proxy/B2BUA scripts — enables unit testing and LLM-assisted script authoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SIPhon Authors" }]
keywords = ["sip", "voip", "proxy", "b2bua", "ims", "testing", "mock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/siphon-project/siphon"
Documentation = "https://github.com/siphon-project/siphon/tree/master/sdk"
Repository = "https://github.com/siphon-project/siphon"

[tool.hatch.build.targets.wheel]
packages = ["siphon_sdk"]
